--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,40 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body, html {
+   width: 100%;
+   height: 100%;
+ }
+
+ .uk {
+   background-color: red;
+   /*height: 100%;*/
+   width: 50%;
+   /*display: inline-block;*/
+   float: left;
+
+ }
+
+ .other-country {
+   background-color: blue;
+   float: right;
+   width: 50%;
+   height: 100%;
+   /*display: inline-block;*/
+ }
+
+
+.stat {
+  height: 50px;
+  width: 50px;
+   background-color: green;
+
+
+}
+
+
+
+
+
