Create dropdown menu, display results on page

--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -34,10 +34,6 @@
     .stat
       %h4
         jeans
-      = @uk.coke
-    .stat
-      %h4
-        jeans
       = @uk.jeans
     .stat
       %h4
@@ -52,5 +48,10 @@
         coffee
       = @uk.coffee
 
-        
+          
 .other-country
+  %form#search
+    %select#country-select
+  %header#other-header
+  .other-all-stats
+    
