--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,35 +18,21 @@
  body, html {
    width: 100%;
    height: 100%;
+   text-align: center;
  }
 
- .uk {
-   background-color: red;
-   /*height: 100%;*/
-   width: 50%;
-   /*display: inline-block;*/
-   float: left;
-
- }
-
- .other-country {
-   background-color: blue;
-   float: right;
-   width: 50%;
-   height: 100%;
-   /*display: inline-block;*/
- }
-
-
-.stat {
-  height: 50px;
-  width: 50px;
-   background-color: green;
-
-
+.uk {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  background-color: blue;
 }
 
-
-
-
-
+.other-country {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  background-color: red;
+}
