Resize other country icons based on difference with UK

--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -8,7 +8,7 @@
       %h4
         meal
       = image_tag "plate7.png", :class => "icon", id: "uk-meal"
-      %p= @uk.meal
+      %p{ id: 'uk-meal-amount' }= @uk.meal
 
     .stat
       %h4
