--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -75,5 +75,6 @@
 .other-country
   %form#search
     %select#country-select
+      %option Select a country
   %header#other-header
   .other-all-stats
