--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,16 @@
  .icon {
    width: 250px;
  }
+
+ #screen {
+  width:100%;
+  height:100%;
+  /*margin:auto auto;*/
+  /*position: fixed;*/
+  top: 0; 
+  bottom: 0;
+  left: 0; 
+  right: 0;
+  background: #000;
+  cursor: pointer;
+ }
