--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -12,67 +12,67 @@
 
     .stat
       %h4
-        meal
+        Meal in an Inexpensive Restaurant
       = image_tag "plate7.png", :class => "icon", id: "uk-meal"
       %p{ id: 'uk-meal-amount' }= @uk.meal
 
     .stat
       %h4
-        mcdonalds
+        Meal at McDonalds
       = image_tag "fast-food.png", :class => "icon", id: "uk-mcdonalds"
       %p{ id: 'uk-mcdonalds-amount' }= @uk.mcdonalds
       
     .stat
       %h4
-        beer
+        Domestic Beer (500ml Draught)
       = image_tag "beer34.png", :class => "icon", id: "uk-beer"
       %p{ id: 'uk-beer-amount' }= @uk.beer
 
     .stat
       %h4
-        coke
+        Coca-Cola (330ml Bottle)
       = image_tag "coke.png", :class => "icon", id: "uk-coke"
       %p{ id: 'uk-coke-amount' }= @uk.coke
 
     .stat
       %h4
-        cigarettes
+        20 Marlboro Cigarettes 
       = image_tag "cigarette8.png", :class => "icon", id: "uk-cigs"
       %p{ id: 'uk-cigs-amount' }= @uk.cigs
 
     .stat
       %h4
-        rent
+        Monthly Rent of a City-Center 1 Bedroom Apartment
       = image_tag "house121.png", :class => "icon", id: "uk-rent"
       %p{ id: 'uk-rent-amount' }= @uk.rent
 
     .stat
       %h4
-        cinema
+        Cinema Ticket
       = image_tag "clapperboard2.png", :class => "icon", id: "uk-cinema"
       %p{ id: 'uk-cinema-amount' }= @uk.cinema
 
     .stat
       %h4
-        jeans
+        Jeans (Levis 501 or Equivolent)
       = image_tag "jeans.png", :class => "icon", id: "uk-jeans"
       %p{ id: 'uk-jeans-amount' }= @uk.jeans
 
     .stat
       %h4
-        shoes
+        Nike Trainers
       = image_tag "trail.png", :class => "icon", id: "uk-shoes"
       %p{ id: 'uk-shoes-amount' }= @uk.shoes
 
     .stat
       %h4
-        taxi
+        Taxi (1km)
       = image_tag "taxi14.png", :class => "icon", id: "uk-taxi"
       %p{ id: 'uk-taxi-amount' }= @uk.taxi
 
     .stat
       %h4
-        coffee
+        Cappuccino
       = image_tag "hot51.png", :class => "icon", id: "uk-coffee"
       %p{ id: 'uk-coffee-amount' }= @uk.coffee
           
