--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,6 @@
  *= require_self
  */
 
-
  body, html {
    width: 100%;
    height: 100%;
@@ -39,7 +38,6 @@
   right: 0;
   top: 0;
   width: 50%;
-  height: 4795px;
   background-color: red;
 }
 
@@ -78,10 +76,11 @@
   float: right;
 }
 
-.totals {
-  width: 100%;
-  height: 350px;
-  background-color: pink;
-  position: absolute;
-  margin-top: 4795px;
+.uk-total h3, .other-total h3 {
+  margin-top: 8rem;
+}
+
+.uk-total h1, .other-total h1 {
+  margin-top: 0;
+  font-size: 6rem;
 }
