--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -14,71 +14,95 @@
       %h4
         Meal in an Inexpensive Restaurant
       = image_tag "plate7.png", :class => "icon", id: "uk-meal"
-      %p{ id: 'uk-meal-amount' }= @uk.meal
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-meal-amount', :class => 'price' }= @uk.meal
 
     .stat
       %h4
         Meal at McDonalds
       = image_tag "fast-food.png", :class => "icon", id: "uk-mcdonalds"
-      %p{ id: 'uk-mcdonalds-amount' }= @uk.mcdonalds
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-mcdonalds-amount', :class => 'price' }= @uk.mcdonalds
       
     .stat
       %h4
         Domestic Beer (500ml Draught)
       = image_tag "beer34.png", :class => "icon", id: "uk-beer"
-      %p{ id: 'uk-beer-amount' }= @uk.beer
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-beer-amount', :class => 'price' }= @uk.beer
 
     .stat
       %h4
         Coca-Cola (330ml Bottle)
       = image_tag "coke.png", :class => "icon", id: "uk-coke"
-      %p{ id: 'uk-coke-amount' }= @uk.coke
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-coke-amount', :class => 'price' }= @uk.coke
 
     .stat
       %h4
         20 Marlboro Cigarettes 
       = image_tag "cigarette8.png", :class => "icon", id: "uk-cigs"
-      %p{ id: 'uk-cigs-amount' }= @uk.cigs
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-cigs-amount', :class => 'price' }= @uk.cigs
 
     .stat
       %h4
         Monthly Rent of a City-Center 1 Bedroom Apartment
       = image_tag "house121.png", :class => "icon", id: "uk-rent"
-      %p{ id: 'uk-rent-amount' }= @uk.rent
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-rent-amount', :class => 'price' }= @uk.rent
 
     .stat
       %h4
         Cinema Ticket
       = image_tag "clapperboard2.png", :class => "icon", id: "uk-cinema"
-      %p{ id: 'uk-cinema-amount' }= @uk.cinema
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-cinema-amount', :class => 'price' }= @uk.cinema
 
     .stat
       %h4
         Jeans (Levis 501 or Equivolent)
       = image_tag "jeans.png", :class => "icon", id: "uk-jeans"
-      %p{ id: 'uk-jeans-amount' }= @uk.jeans
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-jeans-amount', :class => 'price' }= @uk.jeans
 
     .stat
       %h4
         Nike Trainers
       = image_tag "trail.png", :class => "icon", id: "uk-shoes"
-      %p{ id: 'uk-shoes-amount' }= @uk.shoes
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-jeans-amount', :class => 'price' }= @uk.jeans
 
     .stat
       %h4
         Taxi (1km)
       = image_tag "taxi14.png", :class => "icon", id: "uk-taxi"
-      %p{ id: 'uk-taxi-amount' }= @uk.taxi
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-taxi-amount', :class => 'price' }= @uk.taxi
 
     .stat
       %h4
         Cappuccino
       = image_tag "hot51.png", :class => "icon", id: "uk-coffee"
-      %p{ id: 'uk-coffee-amount' }= @uk.coffee
+      %br/
+      %p{ :class => 'price' } £
+      %p{ id: 'uk-coffee-amount', :class => 'price' }= @uk.coffee
 
     .stat.uk-total
       %h3 Total:
-      %h1= "#{@uk.meal + @uk.mcdonalds + @uk.beer + @uk.coke + @uk.cigs + @uk.rent + @uk.cinema + @uk.jeans + @uk.shoes + @uk.taxi + @uk.coffee}"
+      %br/
+      %h1{ :class => 'price' } £
+      %h1{ :class => 'price' }= "#{@uk.meal + @uk.mcdonalds + @uk.beer + @uk.coke + @uk.cigs + @uk.rent + @uk.cinema + @uk.jeans + @uk.shoes + @uk.taxi + @uk.coffee}"
           
 .other-country
   
