--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -2,11 +2,14 @@
   .uk-header
     %h2
       United Kingdom
-  .select-menu
-    %form#search
-      %select#country-select
-        %option Select a country
 
+  %label    
+    .select-menu
+      %form#search
+        %select#country-select
+          %option Select a country
+        .select-button
+          .small-arrow-down
 .uk
   .all-stats
 
