--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,62 @@
    background-color: red;
  }
 
+
+ label {
+   margin-top:15px;
+   position:relative; 
+   background-color:#fff;
+   overflow:hidden; 
+   display:inline-block; 
+   padding:5px;
+   max-width:12em; 
+   margin:auto; 
+   font-size:1em; /*use this to scale the select*/
+ }
+
+
+ select {
+   width:100%;
+   font-size: .9em;
+   min-height: 1em;
+   margin: 0;
+   color:#888;
+   border:none;
+   outline:none;
+   display: inline-block;
+   -webkit-appearance:none;
+   -moz-appearance:none;
+   appearance:none;
+   cursor:pointer;
+ }
+
+ .select-button {
+   background-color:#33B3A2;
+   right:0; top:0;
+   position:absolute;
+   pointer-events:none;
+   padding: 0 .3em;
+   height: 100%;
+ }
+
+
+ .small-arrow-down {
+   width: 0;  
+   height: 0;    
+   border-left: .4em solid transparent; 
+   border-right: .4em solid transparent; 
+   border-top: .4em solid #fff; 
+   margin: 50% 0em 0em 0;
+
+ }
+
+#search {
+  /*margin-top:10px;*/
+}
+
+
+
+
 .uk {
   position: absolute;
   left: 0;
@@ -75,7 +131,7 @@
 
 .select-menu {
   width: 50%;
-  margin-top: 20px;
+  /*margin-top: 20px;*/
   float: right;
 }
 
