--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -16,7 +16,7 @@
     .stat
       %h4
         Meal in an Inexpensive Restaurant
-      = image_tag "plate7.png", :class => "icon", id: "uk-meal"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/plate7.png", :class => "icon", id: "uk-meal"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-meal-amount', :class => 'price' }= @uk.meal
@@ -24,7 +24,7 @@
     .stat
       %h4
         Meal at McDonalds
-      = image_tag "fast-food.png", :class => "icon", id: "uk-mcdonalds"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/fast-food.png", :class => "icon", id: "uk-mcdonalds"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-mcdonalds-amount', :class => 'price' }= @uk.mcdonalds
@@ -32,7 +32,7 @@
     .stat
       %h4
         Domestic Beer (500ml Draught)
-      = image_tag "beer34.png", :class => "icon", id: "uk-beer"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/beer34.png", :class => "icon", id: "uk-beer"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-beer-amount', :class => 'price' }= @uk.beer
@@ -40,7 +40,7 @@
     .stat
       %h4
         Coca-Cola (330ml Bottle)
-      = image_tag "coke.png", :class => "icon", id: "uk-coke"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/coke.png", :class => "icon", id: "uk-coke"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-coke-amount', :class => 'price' }= @uk.coke
@@ -48,7 +48,7 @@
     .stat
       %h4
         20 Marlboro Cigarettes 
-      = image_tag "cigarette8.png", :class => "icon", id: "uk-cigs"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/cigarette8.png", :class => "icon", id: "uk-cigs"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-cigs-amount', :class => 'price' }= @uk.cigs
@@ -56,7 +56,7 @@
     .stat
       %h4
         Monthly Rent of a City-Center 1 Bedroom Apartment
-      = image_tag "house121.png", :class => "icon", id: "uk-rent"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/house121.png", :class => "icon", id: "uk-rent"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-rent-amount', :class => 'price' }= @uk.rent
@@ -64,7 +64,7 @@
     .stat
       %h4
         Cinema Ticket
-      = image_tag "clapperboard2.png", :class => "icon", id: "uk-cinema"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/clapperboard2.png", :class => "icon", id: "uk-cinema"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-cinema-amount', :class => 'price' }= @uk.cinema
@@ -72,7 +72,7 @@
     .stat
       %h4
         Jeans (Levis 501 or Equivolent)
-      = image_tag "jeans.png", :class => "icon", id: "uk-jeans"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/jeans.png", :class => "icon", id: "uk-jeans"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-jeans-amount', :class => 'price' }= @uk.jeans
@@ -80,7 +80,7 @@
     .stat
       %h4
         Nike Trainers
-      = image_tag "trail.png", :class => "icon", id: "uk-shoes"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/trail.png", :class => "icon", id: "uk-shoes"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-jeans-amount', :class => 'price' }= @uk.jeans
@@ -88,7 +88,7 @@
     .stat
       %h4
         Taxi (1km)
-      = image_tag "taxi14.png", :class => "icon", id: "uk-taxi"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/taxi14.png", :class => "icon", id: "uk-taxi"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-taxi-amount', :class => 'price' }= @uk.taxi
@@ -96,7 +96,7 @@
     .stat
       %h4
         Cappuccino
-      = image_tag "hot51.png", :class => "icon", id: "uk-coffee"
+      = image_tag "https://s3-eu-west-1.amazonaws.com/assorted-projects/hackathon-icons/hot51.png", :class => "icon", id: "uk-coffee"
       %br/
       %p{ :class => 'price' } £
       %p{ id: 'uk-coffee-amount', :class => 'price' }= @uk.coffee
